tests/fixtures/invalid/float_lshift_dict.py
# Cannot left shift Float and Dict[str, int]
x: float = 1.0 << {"a": 1}
